<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.addedittimeslot.AddEditTimeSlotFragment">

    <LinearLayout
        android:id="@+id/time_slot_root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_slot_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/timeSlotNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="15"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/add_edit_time_begin"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/add_edit_time_end"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TimePicker
                android:id="@+id/beginTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TimePicker
                android:id="@+id/endTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/day0InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_su"
                android:textOn="@string/add_edit_day_su" />

            <ToggleButton
                android:id="@+id/day1InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_mo"
                android:textOn="@string/add_edit_day_mo" />

            <ToggleButton
                android:id="@+id/day2InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_tu"
                android:textOn="@string/add_edit_day_tu" />

            <ToggleButton
                android:id="@+id/day3InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_we"
                android:textOn="@string/add_edit_day_we" />

            <ToggleButton
                android:id="@+id/day4InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_th"
                android:textOn="@string/add_edit_day_th" />

            <ToggleButton
                android:id="@+id/day5InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_fr"
                android:textOn="@string/add_edit_day_fr" />

            <ToggleButton
                android:id="@+id/day6InWeekToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/toggle_button_color"
                android:textOff="@string/add_edit_day_sa"
                android:textOn="@string/add_edit_day_sa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/serviceOptionRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_mute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mute" />

                <RadioButton
                    android:id="@+id/radio_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/repeatWeeklyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"
                android:text="@string/add_edit_repeat_weekly" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>