<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.mycompany.chservicetime.presentation.timeslotlist.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/timeslotsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/timeslotsLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nextOperationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_operation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#31bb36"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nextOperationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_operation_no"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="100" />

            <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
                android:id="@+id/timeslot_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noTimeSlots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/noTimeSlotsIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/no_timeslots_all"
                android:src="@drawable/ic_assignment_turned_in_24dp" />

            <TextView
                android:id="@+id/noTimeSlotsMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:text="@string/no_timeslots_all" />

            <TextView
                android:id="@+id/noTimeSlotsAdd"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/touch_feedback"
                android:gravity="center"
                android:text="@string/no_timeslots_add" />

        </LinearLayout>
    </RelativeLayout>
</com.mycompany.chservicetime.presentation.timeslotlist.ScrollChildSwipeRefreshLayout>

