<?xml version="1.0" encoding="utf-8"?>

<com.mycompany.chservicetime.presentation.timeslots.CustomCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_gravity="center"
    android:longClickable="true"
    card_view:cardElevation="4sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit_item_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/img_edit"
            android:src="@android:drawable/ic_menu_edit"/>

        <ImageButton
            android:id="@+id/delete_item_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/img_delete"
            android:src="@android:drawable/ic_menu_delete"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/upper_child_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="4dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="School Time"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <CheckBox
            android:id="@+id/activeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"/>

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/nameTextView"
            android:text="09:00 --- 14:30"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/repeatWeeklyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/activeSwitch"
            android:text="Repeat weekly"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/daysTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/timeTextView"
            android:text="Mon Sat"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>
</com.mycompany.chservicetime.presentation.timeslots.CustomCardView>