...
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>

    <string name="time_slot_name">Name :</string>

    <string name="add_timeSlot">New TimeSlot</string>
    <string name="edit_timeSlot">Edit TimeSlot</string>

    <string name="input_name_error">You must input a Name.</string>
    <string name="input_time_error">Begin Time must be NOT same with End Time.</string>
    <string name="input_day_error">You must set at least one day.</string>
    <string name="fail_get_time_slot_error">Fail to get TimeSlot List.</string>
    <string name="time_slot_unknown_error">Unknown error in TimeSlot.</string>
...
